; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmltable.c_nsstr_to_truncated_bstr.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmltable.c_nsstr_to_truncated_bstr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i32 0, align 4
@E_OUTOFMEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64*)* @nsstr_to_truncated_bstr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nsstr_to_truncated_bstr(i32* %0, i64* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64* %1, i64** %4, align 8
  store i8* null, i8** %7, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @nsAString_GetData(i32* %9, i8** %5)
  %11 = load i8*, i8** %5, align 8
  store i8* %11, i8** %6, align 8
  br label %12

12:                                               ; preds = %18, %2
  %13 = load i8*, i8** %6, align 8
  %14 = load i8, i8* %13, align 1
  %15 = call i64 @isdigitW(i8 signext %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %12
  br label %18

18:                                               ; preds = %17
  %19 = load i8*, i8** %6, align 8
  %20 = getelementptr inbounds i8, i8* %19, i32 1
  store i8* %20, i8** %6, align 8
  br label %12

21:                                               ; preds = %12
  %22 = load i8*, i8** %6, align 8
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = icmp eq i32 %24, 46
  br i1 %25, label %26, label %44

26:                                               ; preds = %21
  %27 = load i8*, i8** %6, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 1
  store i8* %28, i8** %6, align 8
  store i8* %27, i8** %7, align 8
  br label %29

29:                                               ; preds = %35, %26
  %30 = load i8*, i8** %6, align 8
  %31 = load i8, i8* %30, align 1
  %32 = call i64 @isdigitW(i8 signext %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %29
  br label %35

35:                                               ; preds = %34
  %36 = load i8*, i8** %6, align 8
  %37 = getelementptr inbounds i8, i8* %36, i32 1
  store i8* %37, i8** %6, align 8
  br label %29

38:                                               ; preds = %29
  %39 = load i8*, i8** %6, align 8
  %40 = load i8, i8* %39, align 1
  %41 = icmp ne i8 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %38
  store i8* null, i8** %7, align 8
  br label %43

43:                                               ; preds = %42, %38
  br label %44

44:                                               ; preds = %43, %21
  %45 = load i8*, i8** %7, align 8
  %46 = icmp ne i8* %45, null
  br i1 %46, label %47, label %56

47:                                               ; preds = %44
  %48 = load i8*, i8** %5, align 8
  %49 = load i8*, i8** %7, align 8
  %50 = load i8*, i8** %5, align 8
  %51 = ptrtoint i8* %49 to i64
  %52 = ptrtoint i8* %50 to i64
  %53 = sub i64 %51, %52
  %54 = trunc i64 %53 to i32
  %55 = call i64 @SysAllocStringLen(i8* %48, i32 %54)
  br label %59

56:                                               ; preds = %44
  %57 = load i8*, i8** %5, align 8
  %58 = call i64 @SysAllocString(i8* %57)
  br label %59

59:                                               ; preds = %56, %47
  %60 = phi i64 [ %55, %47 ], [ %58, %56 ]
  store i64 %60, i64* %8, align 8
  %61 = load i64, i64* %8, align 8
  %62 = load i64*, i64** %4, align 8
  store i64 %61, i64* %62, align 8
  %63 = load i64, i64* %8, align 8
  %64 = icmp ne i64 %63, 0
  br i1 %64, label %65, label %67

65:                                               ; preds = %59
  %66 = load i32, i32* @S_OK, align 4
  br label %69

67:                                               ; preds = %59
  %68 = load i32, i32* @E_OUTOFMEMORY, align 4
  br label %69

69:                                               ; preds = %67, %65
  %70 = phi i32 [ %66, %65 ], [ %68, %67 ]
  ret i32 %70
}

declare dso_local i32 @nsAString_GetData(i32*, i8**) #1

declare dso_local i64 @isdigitW(i8 signext) #1

declare dso_local i64 @SysAllocStringLen(i8*, i32) #1

declare dso_local i64 @SysAllocString(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
